--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
   </head>
@@ -14,8 +15,8 @@
         var index = streams.home.length - 1;
         while(index >= 0){
           var tweet = streams.home[index];
-          var $tweet = $('<div></div>');
-          $tweet.text('@' + tweet.user + ': ' + tweet.message);
+          var $tweet = $('<div class="tweet"></div>');
+          $tweet.text('@' + tweet.user + " (" + tweet.created_at.getHours() + ":" + tweet.created_at.getMinutes() + ") " + ': ' + tweet.message);
           $tweet.appendTo($body);
           index -= 1;
         }
