Implement basic style

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
       var totalTweets = 0;
       var numNew = 0;
 
+      var formatDate = function(date) {
+        var hours = '' + date.getHours();
+        var minutes = '' + date.getMinutes();
+        var seconds = '' + date.getSeconds();
+        hours = hours.length < 2 ? '0' + hours : hours;
+        minutes = minutes.length < 2 ? '0' + minutes : minutes;
+        seconds = seconds.length < 2 ? '0' + seconds : seconds;
+	return hours + ":" + minutes + ":" + seconds;
+      }
+
       var checkNewTweets = function() {
         var numTweets = streams.home.length;
         
@@ -29,7 +39,12 @@
         while(i < numNew){
           var tweet = streams.home[head - i];
 
-	  var timestamp = " (" + tweet.created_at.getHours() + ":" + tweet.created_at.getMinutes() + ")";          
+	  var minutes = '' + tweet.created_at.getMinutes();
+	  if (minutes.length < 3) {
+	    minutes = '0' + minutes;
+	  }
+
+	  var timestamp = formatDate(tweet.created_at); //tweet.created_at.getHours() + ":" + minutes + ":" + tweet.created_at.getSeconds();          
 	  var $timestamp = '<div class="timestamp">' + timestamp + '</div>';
 		  
           var text = '@' + tweet.user + ': ' + tweet.message;
