--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="jquery.js"></script>
+    <script src="moment.js"></script>
     <script src="data_generator.js"></script>
     <script src="script.js"></script>
   </head>
