--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       });
 
     </script>
-	<div class="twittler">
-	<div class="header"><h1>twittler.</h1></div>
-	<div class="tweets"></div>
+	<div id="twittler">
+	<div id="header"><h1>twittler.</h1></div>
+	<div id="tweets"></div>
 	</div>
   </body>
 </html>
