Reorganize folder structure, add Backbone dependencies

--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="jquery.js"></script>
-    <script src="moment.js"></script>
-    <script src="data_generator.js"></script>
-    <script src="script.js"></script>
+    <script src="js/lib/jquery.min.js"></script>
+	<script src="js/lib/underscore-min"></script>
+	<script src="js/lib/backbone-min.js"></script>
+	<script src="js/lib/moment.js"></script>	
+    <script src="js/lib/data_generator.js"></script>
+    <script src="js/app.js"></script>
   </head>
   <body>
     <script>
